# -advanced-physics-library

./: CMakeLists.txt  CMakePresets.json  README.md
include/forces/: Force.h
include/particles/: Particle.h
include/quantum/: QuantumFluctuation.h
include/relativity/: Relativity.h
src/: CMakeLists.txt
src/forces/: Force.cpp
src/particles/: Particle.cpp
src/quantum/: QuantumFluctuation.cpp
src/relativity/: Relativity.cpp
tests/: CMakeLists.txt  main.cpp
